# MIPS-RAAS-Challenge

./: README.md
apriltag_ros/launch/: tag_gazebo.launch.py
docker_files/: Dockerfile
docker_files/docker_px4_foxy/: Dockerfile
docker_files/docker_px4_foxy/scripts/: docker_run.bash  entrypoint.sh
docker_files/docker_px4_galactic_arm64/: Dockerfile
docker_files/docker_px4_galactic_arm64/scripts/: entrypoint.sh
docker_files/old_docker/: Dockerfile.xenial-base  Dockerfile.xenial-minimal  Dockerfile.xenial-packages  generator.sh
husky/husky_gazebo/: CMakeLists.txt
husky/husky_gazebo/params/cafe_world/: nav2_params.yaml  nav2_params_tb3_waffle.yaml
px4_husky_aruco/: CMakeLists.txt  package.xml  setup.cfg  setup.py
px4_husky_aruco/launch/: husky_waypoint.launch.py  px4_aruco_landing.launch.py  px4_husky_aruco_landing.launch.py  px4_waypoint.launch.py
px4_husky_aruco/px4_husky_aruco/: husky_nav2_waypoint.py  husky_waypoint.py  px4_aruco_landing.py  px4_offboard.py  px4_waypoint.py
px4_husky_aruco/waypoints/: waypoints.txt
ros2_aruco/: setup.py
ros2_aruco/launch/: usb_camera_node.launch.py
ros2_markertracker/: setup.cfg
ros2_markertracker/ros2_markertracker/: ArucoWrapper.py  markertracker_node.py
